# Tasks-Management

./: .env  README.md  database.py  main.py  models.py  oauth2.py  pyproject.toml  requirements.txt  schemas.py  test_main.py  token_manager.py
fastapi-env/: pyvenv.cfg
fastapi-env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
repository/: task.py  user.py
routers/: authentication.py  task.py  user.py
