[tool.poetry]
name = "tasks-management"
version = "0.1.0"
description = ""
authors = ["hedi-mac <32374946+hedi-mac@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
